# filter-generator-complementarity

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  schema.py
analysis/: generate_metrics.py
data/: attacks.jsonl  build_dataset.py
src/: analysis.ipynb  pipeline.py  schema.py
src/runners/: generation.py  helpers.py  judges.py  together.py
